--- a/ParkRidge/index.html
+++ b/ParkRidge/index.html
@@ -51,48 +51,50 @@
 <br>
         <h2>WHAT WE OFFER</h2>
 <br>
-        <div class="ImageText1"> 
-       <div class="Image1"> 
-           <img src="http://www.parkridgeresort.in/images/lifestyle.jpg" alt="">
-       </div>
-       <div class="Text1">
-       <p>Lifestyles</p>
-    </div>
-</div> 
-        <div class="ImageText2">
-        <div class="Image2">
-            <img src="http://www.parkridgeresort.in/images/group.jpg" alt="">
+
+<div class="grid">
+        <div class="imgtext-container box1"> 
+            <div class="img-wrapper"> 
+                <img src="http://www.parkridgeresort.in/images/lifestyle.jpg" alt="">
+            </div>
+            <div class="text-wrapper">
+                <p>Lifestyles</p>
+            </div>
+        </div> 
+            <div class="imgtext-container box2">
+            <div class="img-wrapper">
+                <img src="http://www.parkridgeresort.in/images/group.jpg" alt="">
+            </div>
+            <div class="text-wrapper">
+            <p>Groups & Entertainments</p>
         </div>
-        <div class="Text2">
-        <p>Groups & Entertainments</p>
     </div>
-</div>
-        <div class="ImageText3">
-<div class="Image3">
-    <img src="http://www.parkridgeresort.in/images/rest.jpg" alt="">
-</div>
-<div class="Text3">
-        <p>Restaurant</p>
+            <div class="imgtext-container box3">
+    <div class="img-wrapper">
+        <img src="http://www.parkridgeresort.in/images/rest.jpg" alt="">
     </div>
-</div>
-       <div class="ImageText4">
-           <div class="Image4">
-           <img src="http://www.parkridgeresort.in/images/gym.jpg" alt="">
-       </div> 
-       <div class="Text4">
-           <p>Gym & Sports</p>
-       </div>
+    <div class="text-wrapper">
+            <p>Restaurant</p>
+        </div>
     </div>
+        <div class="imgtext-container box4">
+            <div class="img-wrapper">
+            <img src="http://www.parkridgeresort.in/images/gym.jpg" alt="">
+        </div> 
+        <div class="text-wrapper">
+            <p>Gym & Sports</p>
+        </div>
+        </div>
 
-<div class="ImageText5">
-    <div class="Image5">
-<img src="http://www.parkridgeresort.in/images/spahotel.jpg" alt="">
-    </div>
-    <div class="Text5">
-        <p>Spa</p>
+    <div class="imgtext-container box5">
+        <div class="img-wrapper">
+    <img src="http://www.parkridgeresort.in/images/spahotel.jpg" alt="">
+        </div>
+        <div class="text-wrapper">
+            <p>Spa</p>
+        </div>
     </div>
 </div>
-
         <h2>LUXURY ROOMS</h2>
 
         <div class="ImageText6">
